updated index with content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Ethan's Personal Site</title>
+
+        <meta charset="utf-8">
+        <meta name="author" content="Ethan Bokelberg">
+        <meta name="description" content="A personal site with information about me and my skills">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- link css files here-->
+    </head>
+    <!-- begin body section-->
+    <body id="index">
+        <!-- header -->
+        <header>
+            <h1>Ethan Bokelberg</h1>
+        </header>
+        <!-- navigation -->
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="">Resume</a>
+            <a href="">Placeholder</a>
+            <!-- add more pages -->
+        </nav>
+        <!-- main section -->
+        <main>
+            <section class="title-card">
+                <h1>Hello there</h1>
+            </section>
+            <article class="grid-container">
+                <section id="grid-left">
+                    <h2>title</h2>
+                    <p>placeholder text</p>
+                </section>
+                <section id="grid-right">
+                    <h2>title</h2>
+                    <p>placeholder text</p>
+                </section>
+            </article>
+        </main>
+        <footer>
+            <p>Site made by Ethan Bokelberg</p>
+        </footer>
+    </body>
+</html>
