--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- link css files here-->
+        <link rel="stylesheet" href="css/custom.css" type="text/css" media="screen">
     </head>
     <!-- begin body section-->
     <body id="index">
