create page for codecademy project portfolio

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="">Resume</a>
-            <a href="">Placeholder</a>
+            <a href="codecademy.html">Codecademy Project Portfolio</a>
             <!-- add more pages -->
         </nav>
         <!-- main section -->
