--- a/codecademy.html
+++ b/codecademy.html
@@ -34,7 +34,7 @@
                 <section id="projects">
                     <h2>Projects</h2>
                     <ul>
-                        <li>Add projects here!</li>
+                        <li><a href="/excursion/">Excursion Project</a></li>
                     </ul>
                 </section>
                 <section id="skills">
