--- a/codecademy.html
+++ b/codecademy.html
@@ -29,17 +29,25 @@
             <article class="portfolio-container">
                 <section id="about-me">
                     <h2>About Me</h2>
-                    <p></p>
+                    <section id="about-grid">
+                        <aside id="about-text">
+                            <p>Hello there! My name is Ethan Bokelberg, and I am a recent graduate from the University of Vermont with a B.S. in
+                                computer science. This site serves as a portfolio of the projects I will be creating for the Full Stack Engineer Career Path on Codecademy.</p>
+                        </aside>
+                        
+                        <img src="images/headshot.jpg" alt="picture of me">
+                    </section>
                 </section>
                 <section id="projects">
                     <h2>Projects</h2>
                     <ul>
                         <li><a href="/excursion/">Excursion Project</a></li>
+                        <li>More to come!</li>
                     </ul>
                 </section>
                 <section id="skills">
                     <h2>Skills</h2>
-                    <p>Add skills</p>
+                    <p>HTML, CSS, PHP, Python, Java, C/C++, basic JavaScript, Git, UNIX, SQL</p>
                 </section>
             </article>
         </main>
