added detaul element for toggle on site

--- a/codecademy.html
+++ b/codecademy.html
@@ -41,7 +41,15 @@
                 <section id="projects">
                     <h2>Projects</h2>
                     <ul>
-                        <li><a href="/excursion/">Excursion Project</a></li>
+                        <li>
+                            <details class="project">
+                                <summary class="project-name">
+                                    <a href="/excursion/">Excursion Project</a>
+                                </summary>
+                                <p class="project-desc">add project description</p>
+                            </details>
+                            
+                        </li>
                         <li>More to come!</li>
                     </ul>
                 </section>
