--- a/codecademy.html
+++ b/codecademy.html
@@ -40,18 +40,18 @@
                 </section>
                 <section id="projects">
                     <h2>Projects</h2>
-                    <ul>
-                        <li>
                             <details class="project">
                                 <summary class="project-name">
-                                    <a href="/excursion/">Excursion Project</a>
+                                    <h3><a href="/excursion/">Excursion Project</a></h3>
                                 </summary>
                                 <p class="project-desc">add project description</p>
                             </details>
-                            
-                        </li>
-                        <li>More to come!</li>
-                    </ul>
+                            <details class="project">
+                                <summary class="project-name">
+                                    <h3>More to come!</h3>
+                                </summary>
+                                <p class="project-desc">add project description</p>
+                            </details>
                 </section>
                 <section id="skills">
                     <h2>Skills</h2>
