--- a/codecademy.html
+++ b/codecademy.html
@@ -44,7 +44,7 @@
                                 <summary class="project-name">
                                     <h3><a href="/excursion/">Excursion Project</a></h3>
                                 </summary>
-                                <p class="project-desc">add project description</p>
+                                <p class="project-desc"><img src="images/excursion.png"></p>
                             </details>
                             <details class="project">
                                 <summary class="project-name">
