further tweaks and changes

--- a/codecademy.html
+++ b/codecademy.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="css/custom.css" type="text/css" media="screen">
     </head>
     <!-- begin body section-->
-    <body id="index">
+    <body id="portfolio">
         <!-- header -->
         <header>
             <h1>Ethan Bokelberg</h1>
