--- a/codecademy.html
+++ b/codecademy.html
@@ -42,7 +42,7 @@
                     <h2>Projects</h2>
                             <details class="project">
                                 <summary class="project-name">
-                                    <h3><a href="/excursion/">Excursion Project</a></h3>
+                                    <h3><a href="/excursion/" target="_blank">Excursion Project</a></h3>
                                 </summary>
                                 <p class="project-desc"><img src="images/excursion.png"></p>
                             </details>
