--- a/codecademy.html
+++ b/codecademy.html
@@ -33,6 +33,8 @@
                         <aside id="about-text">
                             <p>Hello there! My name is Ethan Bokelberg, and I am a recent graduate from the University of Vermont with a B.S. in
                                 computer science. This site serves as a portfolio of the projects I will be creating for the Full Stack Engineer Career Path on Codecademy.</p>
+                            <p>I am currently working my way through the Full Stack Engineer Career Path on Codecademy to help widen my skillset for searching for jobs.</p>
+                            <p id="contact-link"><a href="contact.html">Contact Me</a></p>
                         </aside>
                         
                         <img src="images/headshot.jpg" alt="picture of me">
