fixed incorrect image linking

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                 <aside id="contact-grid">
                     <a href="https://www.linkedin.com/in/ethanbokelberg/"><img src="images/In-Blue-Logo.png.original.png" alt="linkedIn"></a>
                     <a href="https://github.com/ebokelbe"><img src="images/GitHub-Mark-120px-plus.png" alt="github"></a>
-                    <a href="mailto:ethan.bokelberg@gmail.com"><img src="images/In-Blue-Logo.png.original.png" alt="linkedIn"></a>
+                    <a href="mailto:ethan.bokelberg@gmail.com"><img src="images/email.png" alt="linkedIn"></a>
                 </aside>
             </section>
         </main>
