--- a/contact.html
+++ b/contact.html
@@ -25,15 +25,18 @@
         </nav>
         <!-- main section -->
         <main>
-            <section id="contact-content">
-                <h2>Contact Me</h2>
-                <p>blurb</p>
-                <aside id="contact-grid">
-                    <a href="https://www.linkedin.com/in/ethanbokelberg/"><img src="images/In-Blue-Logo.png.original.png" alt="linkedIn"></a>
-                    <a href="https://github.com/ebokelbe"><img src="images/GitHub-Mark-120px-plus.png" alt="github"></a>
-                    <a href="mailto:ethan.bokelberg@gmail.com"><img src="images/email.png" alt="linkedIn"></a>
-                </aside>
-            </section>
+            <article id="contact-container">
+                <section id="contact-content">
+                    <h2>Contact Me</h2>
+                    <p>I am currently working my way throught the Codecademy Full Stack Engineer Career Path, but upon its completion I hope to enter the workforce in a software engineering
+                        oriented job. If you have any opportunities I fit the profile for, please contact me via one of the following methods. </p>
+                    <section id="contact-links-grid">
+                        <a href="https://www.linkedin.com/in/ethanbokelberg/"><img src="images/In-Blue-Logo.png.original.png" alt="linkedIn"></a>
+                        <a href="https://github.com/ebokelbe"><img src="images/GitHub-Mark-120px-plus.png" alt="github"></a>
+                        <a href="mailto:ethan.bokelberg@gmail.com"><img src="images/email.png" alt="linkedIn"></a>
+                    </section>
+                </section>
+            </article>
         </main>
         <footer>
             <p>Site made by Ethan Bokelberg</p>
