--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             <article id="contact-container">
                 <section id="contact-content">
                     <h2>Contact Me</h2>
-                    <p>I am currently working my way throught the Codecademy Full Stack Engineer Career Path, but upon its completion I hope to enter the workforce in a software engineering
+                    <p>I am currently working my way through the Codecademy Full Stack Engineer Career Path, but upon its completion I hope to enter the workforce in a software engineering
                         oriented job. If you have any opportunities I fit the profile for, please contact me via one of the following methods. </p>
                     <section id="contact-links-grid">
                         <a href="https://www.linkedin.com/in/ethanbokelberg/"><img src="images/In-Blue-Logo.png.original.png" alt="linkedIn"></a>
