changes for sryling contact links

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                     <h2>Contact Me</h2>
                     <p>I am currently working my way through the Codecademy Full Stack Engineer Career Path, but upon its completion I hope to enter the workforce in a software engineering
                         oriented job. If you have any opportunities I fit the profile for, please contact me via one of the following methods. </p>
-                    <section id="contact-links-grid">
+                    <section id="contact-links">
                         <a href="https://www.linkedin.com/in/ethanbokelberg/"><img src="images/In-Blue-Logo.png.original.png" alt="linkedIn"></a>
                         <a href="https://github.com/ebokelbe"><img src="images/GitHub-Mark-120px-plus.png" alt="github"></a>
                         <a href="mailto:ethan.bokelberg@gmail.com"><img src="images/email.png" alt="linkedIn"></a>
