added link to in progress jamming project

--- a/codecademy.html
+++ b/codecademy.html
@@ -50,6 +50,12 @@
                             </details>
                             <details class="project">
                                 <summary class="project-name">
+                                    <h3><a href="/jamming/" target="_blank">Jamming React Project</a></h3>
+                                </summary>
+                                <p class="project-desc"><img src="" alt="no image yet!"></p>
+                            </details>
+                            <details class="project">
+                                <summary class="project-name">
                                     <h3>More to come!</h3>
                                 </summary>
                                 <p class="project-desc">add project description</p>
