updated jamming link/section

--- a/codecademy.html
+++ b/codecademy.html
@@ -50,9 +50,9 @@
                             </details>
                             <details class="project">
                                 <summary class="project-name">
-                                    <h3><a href="/jamming/" target="_blank">Jamming React Project</a></h3>
+                                    <h3><a href="https://reminiscent-man.surge.sh/" target="_blank">Jamming React Project</a></h3>
                                 </summary>
-                                <p class="project-desc"><img src="" alt="no image yet!"></p>
+                                <p class="project-desc"><img src="images/jamming.png"></p>
                             </details>
                             <details class="project">
                                 <summary class="project-name">
